[project]
name = "ai_research"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jason Goebel", email = "goebel.jason@gmail.com"},
]
dependencies = ["arxiv>=2.1.3", "llama-index>=0.12.19", "python-dotenv>=1.0.1", "notebook>=7.3.2", "groq>=0.18.0", "llama-index-llms-groq>=0.3.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
